--- a/stories.html
+++ b/stories.html
@@ -110,6 +110,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="vsem-dobrogo-ponedel-nika-xxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75234558_166127924600397_3489757566446145037_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&oh=9841ed8ee29d0b3225694c6940df159d&oe=5E846F8F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Всем доброго понедельника 👋🏼">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="prodolzhim-pro-sostav-udivitel-nogo" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/74666966_724725308048040_6910154104152136564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=7569bfc9cf732b035bfa9c267a792233&oe=5E861607" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Продолжим про состав удивительного">
@@ -172,7 +182,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="pochemu-na-gryadkakh-soloma" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75534712_938185306560101_6116340615502684681_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=41a16e940194f5e2940e34055f8ba6b0&oe=5DE76ABF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Почему на грядках солома,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75534712_938185306560101_6116340615502684681_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=e8ca4677941a6952d9472e5ececc99c1&oe=5DE8BC3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Почему на грядках солома,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -232,7 +242,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="konets-oktyabrya-tak-to" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71965353_2518513281715291_6301524324139376712_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=f6f4b9a00f2581459b58d5c7fa5eb329&oe=5DE72FAA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Конец октября так-то">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71965353_2518513281715291_6301524324139376712_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=72a7ecd430a49ccd3c300b5eff776295&oe=5DE8812A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Конец октября так-то">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -432,7 +442,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="obraz-ulitki-vstrechaetsya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69493174_772681193165706_7287557401448678866_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=ba48b5d3df25d9d047d8e94418e6f942&oe=5DE7788D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Образ улитки встречается">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69493174_772681193165706_7287557401448678866_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=3ff232386791e05a7bafddfe7dc53e59&oe=5DE8CA0D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Образ улитки встречается">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
