--- a/links.html
+++ b/links.html
@@ -327,6 +327,25 @@ border: 1px solid #FFFFFF;
 " class="btn links-page-blc__btn">Отправить запрос</button>
 							</form>
 						</div>
+
+
+
+						<a href="./posts/unikal-nyy-sostav-mutsina.html" class="links-page-btn-pic" style="
+background-color: Transparent;
+--elems-color: ;
+--elems-hover: ;
+border: 1px solid #FFFFFF;
+color: #FFFFFF;--btn-txt-color: #FFFFFF;
+"
+>
+							<img src="./img/mucin.jpg" alt="">
+								<div class="links-page-btn-pic__txt">
+									<strong>Уникальный состав муцина</strong>
+								</div>
+							</img>
+						</a>
+
+
 					</div>
 
 					<div class="links-page-soc">
