--- a/links.html
+++ b/links.html
@@ -338,10 +338,16 @@ border: 1px solid #FFFFFF;
 							<div class="links-page-blc__title">Узнать больше</div>
 							<div class="links-page-blc__txt">Укажите ваш номер телефона, и мы перезвоним вам.</div>
 							<form action="https://admapi.itsinsta.site/api/profiles/ulitochka_eco_farm/messages" method="post" class="links-page-blc__form">
-								<input type="tel" name="contact" class="links-page-blc__input" required placeholder="Введите телефон">
+								<input type="tel" name="contact" class="links-page-blc__input" required placeholder="Введите телефон" style="
+background-color: Transparent;
+border: 1px solid #FFFFFF;
+--brd-color: #FFFFFF;
+color: #FFFFFF;
+"/>
 								<button style="
 background-color: Transparent;
 border: 1px solid #FFFFFF;
+color: #FFFFFF;
 " class="btn links-page-blc__btn">Отправить запрос</button>
 							</form>
 							<div id="leadSent" class="links-page-blc__txt"></div>
