--- a/stories.html
+++ b/stories.html
@@ -177,7 +177,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="unikal-nyy-sostav-mutsina" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/74581075_1293223950884592_5473258933632487154_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=d0dc17dba490e4417974be1366ad6530&oe=5E6A7B7E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Уникальный состав муцина">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/74581075_1293223950884592_5473258933632487154_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=bfbc5c71a8ecd71ee36bd5ee11cd0670&oe=5E92087E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Уникальный состав муцина">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +187,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lavanda---unikal-nyy-pryanyy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/75467454_2487068384874141_1165637651351886060_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&oh=1742cf9feebd77ab4c848d30d9f9e190&oe=5E77C713" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Лаванда - уникальный пряный">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/75467454_2487068384874141_1165637651351886060_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Q5ZnKW74LDcAX9t3RP1&oh=59c6d6cb1dffc0c58df0d61f89074a79&oe=5E77C713" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Лаванда - уникальный пряный">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -207,7 +207,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="pochemu-na-gryadkakh-soloma" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75534712_938185306560101_6116340615502684681_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=f887edd6b161817321e4e4a27723fdaa&oe=5DF5EB3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Почему на грядках солома,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75534712_938185306560101_6116340615502684681_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=064bba8aa0f48244675b09505835a011&oe=5DF73CBF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Почему на грядках солома,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -237,7 +237,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxosnovnoe-ix-na-nash-vzglyadx-luchshee" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75491423_535226503955633_6848220419417532079_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=1abf3b45281ee24228c17eda354ea2b7&oe=5E7A5DC2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💧Основное и, на наш взгляд, лучшее">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75491423_535226503955633_6848220419417532079_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=Lr_e8XJNOm4AX_8EeIf&oh=8e5026f43f973ce1fb84e02be99971aa&oe=5E7A5DC2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💧Основное и, на наш взгляд, лучшее">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -267,7 +267,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="konets-oktyabrya-tak-to" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71965353_2518513281715291_6301524324139376712_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=4ccd913f225e91ff6aefcc84db231fbb&oe=5DF5B02A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Конец октября так-то">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71965353_2518513281715291_6301524324139376712_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=6334919653e485030208871508077f0d&oe=5DF701AA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Конец октября так-то">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -307,7 +307,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="v-chem-preimushchestvo-soderzhaniya-sobstvennoy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/73097466_2656350361089908_338527357690397060_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=XZ_dwcT48FQAX8COgbF&oh=07d9184ad6f6803613dee03313f4923a&oe=5E6F9613" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В чем преимущество содержания собственной">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/73097466_2656350361089908_338527357690397060_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&oh=063fb730fc6a64bf7ae52bcd0fe91e73&oe=5E6F9613" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="В чем преимущество содержания собственной">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -357,7 +357,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="nash-nochnoy-dozor-xxxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/72639402_2648704105190902_926812431186175762_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&oh=dc301f4ed046bc35a956966de4a4fa22&oe=5E6ADCDE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Наш ночной дозор 🦹🏻‍♀️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/72639402_2648704105190902_926812431186175762_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&oh=5500b1f3ad97e5088d9b707cbe1d0c6d&oe=5E9269DE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Наш ночной дозор 🦹🏻‍♀️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -467,7 +467,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="obraz-ulitki-vstrechaetsya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69493174_772681193165706_7287557401448678866_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=5ba1b30a0d278f5c90fd8c46222f1873&oe=5DF5F90D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Образ улитки встречается">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69493174_772681193165706_7287557401448678866_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=c390d1dc4eaaa196c24b617ff1a578b2&oe=5DF74A8D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Образ улитки встречается">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -487,7 +487,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="pervym-delom-vzyalis-" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69358352_102974827706247_3235976979801719884_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=c65534533c52b07ed0021515098b6da5&oe=5E6A2C27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Первым делом взялись">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69358352_102974827706247_3235976979801719884_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=443153bd68da6df88781444cd20d47bb&oe=5E91B927" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Первым делом взялись">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
