--- a/links.html
+++ b/links.html
@@ -380,7 +380,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 							class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
 					<div class="links-page-footer">
-						<a href="https://lichnyj-brend.ru/start?ref=ulitochka_eco_farm" target="_blank">Личный Бренд</a><br/>
+						<a href="https://lichnyj-brend.ru?ref=ulitochka_eco_farm" target="_blank">Личный Бренд</a><br/>
 						@ulitochka_eco_farm рекомендует <br/>&nbsp;
 					</div>
 				</div>
