--- a/main.html
+++ b/main.html
@@ -317,7 +317,7 @@
 					<div class="items-item">
 						<a href="./posts/./xxnovogodnyaya-aktsiyaxxdarim-skidku.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/74532948_543602183155830_385788126010632760_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=823465d38c82c70f07b6c4f779911051&oe=5E8F1C28" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎄Новогодняя акция🎄Дарим скидку">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/74532948_543602183155830_385788126010632760_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=c3ggzOdxuuwAX-bGFSG&oh=72a1d16a881ff3083f80c05193574493&oe=5E8F1C28" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎄Новогодняя акция🎄Дарим скидку">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -493,7 +493,7 @@
 					<div class="items-item">
 						<a href="./posts/./prodolzhim-razbirat--sostav.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/76965258_455338385116187_4572895250832640704_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&oh=c940c69efb3576adc222a43664f148c3&oe=5E8EF950" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Продолжим разбирать состав">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/76965258_455338385116187_4572895250832640704_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=m637_oKCagIAX9y8eJZ&oh=ff3f2ecd229c4256d531c68697ca4030&oe=5E8EF950" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Продолжим разбирать состав">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -581,7 +581,7 @@
 					<div class="items-item">
 						<a href="./posts/./xxosnovnoe-ix-na-nash-vzglyadx-luchshee.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75491423_535226503955633_6848220419417532079_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=Lr_e8XJNOm4AX_8EeIf&oh=8e5026f43f973ce1fb84e02be99971aa&oe=5E7A5DC2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💧Основное и, на наш взгляд, лучшее">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/75491423_535226503955633_6848220419417532079_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=1abf3b45281ee24228c17eda354ea2b7&oe=5E7A5DC2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💧Основное и, на наш взгляд, лучшее">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
