--- a/stories.html
+++ b/stories.html
@@ -105,6 +105,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="kak-zhe-prekrasno-zhit--za-gorodom" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/75223580_290898778521024_644791252341937407_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=5514dfff5f832aca49598145a97e3df4&oe=5E7F557A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Как же прекрасно жить за городом!">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xxpro-pchyolxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/72296749_451022435615875_8039686175623080522_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=e128d1f8d683d17a5d5d43e923c3976e&oe=5E7A0E9A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🐝Про пчёл🐝">
@@ -117,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxnovogodnyaya-aktsiyaxxdarim-skidku" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/74532948_543602183155830_385788126010632760_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=c3ggzOdxuuwAX-bGFSG&oh=72a1d16a881ff3083f80c05193574493&oe=5E8F1C28" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎄Новогодняя акция🎄Дарим скидку">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/74532948_543602183155830_385788126010632760_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=823465d38c82c70f07b6c4f779911051&oe=5E8F1C28" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎄Новогодняя акция🎄Дарим скидку">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zachem-ulitke-rozhki" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75587985_2326867130756292_738805530047493792_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=7397aedc694209afd9d259723ade1d0b&oe=5E6C8309" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Зачем улитке рожки?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75587985_2326867130756292_738805530047493792_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=749990df806085d9dcecd84bbed9ffe9&oe=5E941009" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Зачем улитке рожки?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -147,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="prodolzhim-pro-sostav-udivitel-nogo" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/74666966_724725308048040_6910154104152136564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=7569bfc9cf732b035bfa9c267a792233&oe=5E861607" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Продолжим про состав удивительного">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/74666966_724725308048040_6910154104152136564_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=9057215deda1f2ba5ed888f04432cdcc&oe=5EADA307" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Продолжим про состав удивительного">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +197,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="lavanda---unikal-nyy-pryanyy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/75467454_2487068384874141_1165637651351886060_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=Q5ZnKW74LDcAX9t3RP1&oh=59c6d6cb1dffc0c58df0d61f89074a79&oe=5E77C713" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Лаванда - уникальный пряный">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/75467454_2487068384874141_1165637651351886060_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&oh=1742cf9feebd77ab4c848d30d9f9e190&oe=5E77C713" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Лаванда - уникальный пряный">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -197,7 +207,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="prodolzhim-razbirat--sostav" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/76965258_455338385116187_4572895250832640704_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=m637_oKCagIAX9y8eJZ&oh=ff3f2ecd229c4256d531c68697ca4030&oe=5E8EF950" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Продолжим разбирать состав">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/76965258_455338385116187_4572895250832640704_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&oh=c940c69efb3576adc222a43664f148c3&oe=5E8EF950" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Продолжим разбирать состав">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -207,7 +217,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="pochemu-na-gryadkakh-soloma" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75534712_938185306560101_6116340615502684681_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=064bba8aa0f48244675b09505835a011&oe=5DF73CBF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Почему на грядках солома,">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75534712_938185306560101_6116340615502684681_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&oh=2dbef8b4e11fc5d44f907564f8baf08a&oe=5DF88E3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Почему на грядках солома,">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -217,7 +227,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="proshlo-eshchyo-tri-dnya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/72917074_2373650712964491_4765924432380027633_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=6a87d81782c56517ffe610f006470b14&oe=5E8F3108" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Прошло ещё три дня.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/72917074_2373650712964491_4765924432380027633_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=d18gwnCcGr8AX8fZl3J&oh=69608897953c92501badf9c99d7ff4fe&oe=5E8F3108" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Прошло ещё три дня.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -267,7 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="konets-oktyabrya-tak-to" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71965353_2518513281715291_6301524324139376712_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=6334919653e485030208871508077f0d&oe=5DF701AA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Конец октября так-то">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71965353_2518513281715291_6301524324139376712_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=a41e2bfcaf77fbb097e4594668d44829&oe=5DF8532A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Конец октября так-то">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -397,7 +407,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="mutsin-ne-prosto-omolazhivaet" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70520490_167324311131714_6813783115582528202_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=2c7c1af426a5ee2f96085996fecf9af9&oe=5E6BEC1D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Муцин не просто омолаживает">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70520490_167324311131714_6813783115582528202_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=30371a3b5edfe5e1ec96635bea7f121a&oe=5E93791D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Муцин не просто омолаживает">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -467,7 +477,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="obraz-ulitki-vstrechaetsya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69493174_772681193165706_7287557401448678866_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=c390d1dc4eaaa196c24b617ff1a578b2&oe=5DF74A8D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Образ улитки встречается">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/69493174_772681193165706_7287557401448678866_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&oh=65af715ab58ebc3fb36e0287aaa107c0&oe=5DF89C0D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Образ улитки встречается">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -547,7 +557,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ulitka-odno-iz-samykh-drevnikh" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/61822976_337233680284802_2097941769597651278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&oh=f2c87dcef792a6276990e0faac2fc1d0&oe=5E869136" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Улитка одно из самых древних">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/61822976_337233680284802_2097941769597651278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&oh=b83d8c2724ce7b503c8f718bae8e833c&oe=5EAE1E36" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Улитка одно из самых древних">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
