--- a/error.html
+++ b/error.html
@@ -123,7 +123,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>7</span> <span><i class="fa fa-heart" aria-hidden="true"></i>29</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/73527662_785047071948609_3843243008284490678_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=66APc4qa1cMAX_TWXp9&oh=c2917936e0a8a9f900f03b8466a67587&oe=5EAC3586" alt="История о том как мы дорвались до огорода">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/73527662_785047071948609_3843243008284490678_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=vh1QdzpbEckAX_0qrwz&oh=ac034644e306bf047faf2b2f5a1881eb&oe=5EAC3586" alt="История о том как мы дорвались до огорода">
 							</div>
 							<div class="article-more__item-name">История о том как мы дорвались до огорода</div>
 						</a>
@@ -168,18 +168,20 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>32</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/78912761_188619372309833_1047117982070060253_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=zpznWiJT9cUAX93h7ET&oh=326f1a7155fbcf81c70bbb3eb8ec1733&oe=5E950B06" alt="Что внутри?">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/78912761_188619372309833_1047117982070060253_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=ROe_P5zkaOMAX-zA2lJ&oh=6232bd3232f75cc1f8569736581b9347&oe=5E950B06" alt="Что внутри?">
 							</div>
 							<div class="article-more__item-name">Что внутри?</div>
 						</a>
-							<a href="./posts/./xxnovogodnyaya-aktsiyaxxdarim-skidku.html" class="article-more__item">
+							<a href="./posts/./-dot-xxprodlenie-novogodney-aktsiixx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>30</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/74532948_543602183155830_385788126010632760_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=Vn-uLgjIhV8AX_TL284&oh=472345d26c3a25e35f015387fde5aed6&oe=5E8F1C28" alt="🎄Новогодняя акция🎄Дарим скидку">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/77039068_158669528734049_4581008309227362048_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=w76l46SZ_jsAX-WKisS&oh=e055e682a9edaf740c4d9f3a1a189692&oe=5EADBA26" alt=".
+🎄Продление новогодней акции🎄">
 							</div>
-							<div class="article-more__item-name">🎄Новогодняя акция🎄Дарим скидку</div>
+							<div class="article-more__item-name">.
+🎄Продление новогодней акции🎄</div>
 						</a>
 						</div>
 				</div>
