--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="экоферма улиточка муцин улитки жизньулиток snailfarm snailmucin история еда сад огород">
-    <meta name="keywords" content="экоферма улиточка муцин улитки жизньулиток snailfarm snailmucin история еда сад огород" />
+    <meta name="description" content="экоферма улиточка муцин улитки жизньулиток история snailfarm snailmucin сад огород еда">
+    <meta name="keywords" content="экоферма улиточка муцин улитки жизньулиток история snailfarm snailmucin сад огород еда" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Муцин Улитки." />
-    <meta property="og:description" content="экоферма улиточка муцин улитки жизньулиток snailfarm snailmucin история еда сад огород" />
+    <meta property="og:description" content="экоферма улиточка муцин улитки жизньулиток история snailfarm snailmucin сад огород еда" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="ulitochka_eco_farm" />
 
@@ -100,6 +100,15 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
+								<div class="stories__slide" title="муцин экоферма улиточка">
+									<a href="./tags/./mutsin-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ekoferma-ulitochka.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">муцин экоферма улиточка</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="экоферма улиточка">
 									<a href="./tags/./ekoferma-ulitochka.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka.png);"></div>
@@ -118,11 +127,20 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка жизньулиток">
-									<a href="./tags/./ekoferma-ulitochka-zhizn-ulitok.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka-zhizn-ulitok.png);"></div>
+								<div class="stories__slide" title="жизньулиток экоферма улиточка">
+									<a href="./tags/./zhizn-ulitok-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/zhizn-ulitok-ekoferma-ulitochka.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка жизньулиток</div>
+">жизньулиток экоферма улиточка</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="история экоферма улиточка">
+									<a href="./tags/./istoriya-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/istoriya-ekoferma-ulitochka.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">история экоферма улиточка</div>
 									</a>
 								</div>
 							</div>
@@ -132,15 +150,6 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ulitochka-mutsin.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
 ">улиточка муцин</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка муцин">
-									<a href="./tags/./ekoferma-ulitochka-mutsin.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka-mutsin.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка муцин</div>
 									</a>
 								</div>
 							</div>
@@ -163,38 +172,38 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка история">
-									<a href="./tags/./ekoferma-ulitochka-istoriya.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka-istoriya.png);"></div>
+								<div class="stories__slide" title="сад огород экоферма улиточка">
+									<a href="./tags/./sad-ogorod-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/sad-ogorod-ekoferma-ulitochka.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка история</div>
+">сад огород экоферма улиточка</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка сад огород">
-									<a href="./tags/./ekoferma-ulitochka-sad-ogorod.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka-sad-ogorod.png);"></div>
+								<div class="stories__slide" title="допосле экоферма улиточка">
+									<a href="./tags/./doposle-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/doposle-ekoferma-ulitochka.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка сад огород</div>
+">допосле экоферма улиточка</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка еда">
-									<a href="./tags/./ekoferma-ulitochka-eda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka-eda.png);"></div>
+								<div class="stories__slide" title="события экоферма улиточка">
+									<a href="./tags/./sobytiya-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/sobytiya-ekoferma-ulitochka.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка еда</div>
+">события экоферма улиточка</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка допосле">
-									<a href="./tags/./ekoferma-ulitochka-doposle.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka-doposle.png);"></div>
+								<div class="stories__slide" title="еда экоферма улиточка">
+									<a href="./tags/./eda-ekoferma-ulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/eda-ekoferma-ulitochka.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка допосле</div>
+">еда экоферма улиточка</div>
 									</a>
 								</div>
 							</div>
@@ -204,15 +213,6 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
 ">экоферма</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка события">
-									<a href="./tags/./ekoferma-ulitochka-sobytiya.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka-sobytiya.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка события</div>
 									</a>
 								</div>
 							</div>
